Implement CLI commands for WaterUI: build, clean, create, devices, doctor, package, and run
- Added `build` command for compiling projects for various platforms.
- Introduced `clean` command to remove build artifacts.
- Created `create` command for scaffolding new WaterUI projects with interactive prompts.
- Implemented `devices` command to list available devices and simulators for testing.
- Added `doctor` command to check the development environment and toolchain status.
- Developed `package` command for packaging applications for distribution.
- Implemented `run` command to build and run applications on selected devices.
- Established a global shell module for consistent output formatting and progress indication.

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -11,6 +11,10 @@ description.workspace = true
 keywords.workspace = true
 categories.workspace = true
 
+[[bin]]
+name = "water"
+path = "src/terminal/main.rs"
+
 [dependencies]
 cargo_metadata = "0.23.1"
 cargo_toml = "0.22.3"
@@ -29,6 +33,16 @@ time = { workspace = true, features = ["serde"] }
 toml = "0.9.8"
 tracing.workspace = true
 which = "8.0.0"
+
+# Terminal UI dependencies
+clap = { version = "4", features = ["derive"] }
+dialoguer = "0.11"
+indicatif = "0.17"
+anstream = "0.6"              # Auto-detected ANSI output stream
+anstyle = "1"                 # ANSI styling without manual escape codes
+ctrlc = "3.4"
+whoami = "1.5"
+heck = "0.5"                  # Case conversion (kebab-case, snake_case, etc.)
 
 [lints]
 workspace = true
