--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,7 @@
 .DS_Store
-/Cargo.lock
-/target
-/*/target
-/*/Cargo.lock
-/backends/apple/build
-/.build
-/water-demo
-
-
-.vscode/*
-
-# Build artifacts
-/demo/apple/build/
-*.o
-*.a
-*.so
-*.dylib
-*.exe
-*.dll
-*.pdb
-all.rs.txt
-.jdks/
-
-# Gradle / Android build artefacts
-/.gradle/
-/.idea/
-/build/
-/*/build/
-local.properties
+target
+.water
+apple/DerivedData
+apple/build
+*.xcworkspace/xcuserdata
+web/pkg
