--- a/demo/Cargo.toml
+++ b/demo/Cargo.toml
@@ -1,19 +1,16 @@
 [package]
 name = "demo"
 version = "0.1.0"
-edition.workspace = true
-authors.workspace = true
-rust-version.workspace = true
-license.workspace = true
-readme = "README.md"
-repository.workspace = true
-description = "A demo project of WaterUI"
-keywords.workspace = true
-categories.workspace = true
+edition = "2024"
+authors = ["lexoliu"]
 
-[dependencies]
-waterui.workspace = true
-waterui-ffi.workspace = true
+[dependencies.waterui]
+path = "/Users/lexoliu/Coding/waterui"
+
+[dependencies.waterui-ffi]
+path = "/Users/lexoliu/Coding/waterui/ffi"
 
 [lib]
-crate-type = ["lib","staticlib","cdylib"]
+crate-type = ["staticlib", "cdylib", "rlib"]
+
+[workspace]
