--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,8 +86,8 @@ wgpu = "27.0.1"
 time = "0.3"
 tiny-skia = "0.11"
 vello = { git = "https://github.com/linebender/vello", branch = "main" }
-zenwave = { git = "https://github.com/zen-rs/zenwave", branch = "dev" }
-skyzen = { git = "https://github.com/zen-rs/skyzen", branch = "dev", default-features = false }
+zenwave = "0.1.0"
+skyzen = { version = "0.1.0", default-features = false }
 
 tracing-panic = "0.1.2"
 
