Enhance Android and Apple backends with permission management and Gradle build improvements

--- a/examples/video-player/Water.toml
+++ b/examples/video-player/Water.toml
@@ -4,3 +4,7 @@ waterui_path = "../.."
 type = "playground"
 name = "Video Player Example"
 bundle_identifier = "com.waterui.video_player_example"
+
+[permissions.internet]
+enable = true
+description = "Required to stream video content from the internet"
