--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,7 +86,7 @@ wgpu = "27.0.1"
 time = "0.3"
 tiny-skia = "0.11"
 vello = { git = "https://github.com/linebender/vello", branch = "main" }
-zenwave = "0.2.0"
+zenwave = { version = "0.2.0", default-features = false, features = ["hyper-backend", "ws"] }
 skyzen = { version = "0.1.0", default-features = false }
 
 tracing-panic = "0.1.2"
@@ -118,9 +118,17 @@ libloading = "0.8"
 thiserror = "2.0.17"
 uuid = { version = "1.18.1", features = ["v4"] }
 serde_json = "1.0"
-zenwave.workspace = true
 waterui-graphics = { workspace = true, optional = true }
 async-fs = "2.2.0"
+
+[target.'cfg(target_vendor = "apple")'.dependencies]
+zenwave = { workspace = true, features = ["native-tls"] }
+
+[target.'cfg(target_os = "android")'.dependencies]
+zenwave = { workspace = true, features = ["rustls"] }
+
+[target.'cfg(not(any(target_vendor = "apple", target_os = "android")))'.dependencies]
+zenwave = { workspace = true, features = ["rustls"] }
 
 [features]
 default = []
