feat(android): add support for multiple architectures and clean jniLibs
- Introduced `AndroidArch` enum to define target architectures for Android builds.
- Updated `Args` struct to accept a comma-separated list of architectures via the `--arch` flag.
- Implemented `clean_jni_libs` method to remove stale JNI libraries before building.
- Enhanced the build process to handle multiple architectures, building for each specified architecture.
- Set environment variables for CMake toolchain and Android ABI based on the selected architecture.

refactor(text): switch from inkjet to syntect for syntax highlighting

- Replaced inkjet library with syntect for syntax highlighting functionality.
- Updated `DefaultHighlighter` to utilize syntect's `HighlightLines` for improved performance and accuracy.
- Refactored language handling to support file extensions and added additional language aliases.
- Enhanced error handling for syntax highlighting to ensure fallback behavior.

--- a/components/media/Cargo.toml
+++ b/components/media/Cargo.toml
@@ -16,7 +16,7 @@ waterui-core.workspace = true
 waterui-url.workspace = true
 waterui-color.workspace = true
 mime = "0.3.17"
-image = "0.25.8"
+image = { version = "0.25.8", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "ico"] }
 blocking = "1.6.2"
 base64 = "0.22.1"
 async-oneshot = "0.5"
