--- a/components/text/Cargo.toml
+++ b/components/text/Cargo.toml
@@ -16,7 +16,7 @@ waterui-color.workspace = true
 waterui-layout.workspace = true
 nami.workspace = true
 time.workspace = true
-inkjet = "0.11.1"
+syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
 async-oneshot = "0.5"
 pulldown-cmark = "0.13"
 
