feat: enhance logging levels for Apple platforms and improve app structure
- Updated `LogLevel` to map error, warning, and info levels to "default" for Apple logging.
- Added `NSPrincipalClass` key to Xcode project templates for macOS compatibility.
- Implemented a `main` function in the Swift app template to set up the application delegate.
- Added `tracing` dependency to graphics component for better logging.
- Enhanced `CanvasRenderer` with an intermediate texture and blit pipeline for improved rendering.
- Updated `ShaderRenderer` to handle format mismatches and added error logging.
- Simplified the flame shader example to demonstrate time-based color changes.
- Improved FFI handling for `GpuSurface` to manage renderer pointers safely.
- Introduced `App` and `Window` structs for better application and window management in the UI framework.

--- a/components/graphics/Cargo.toml
+++ b/components/graphics/Cargo.toml
@@ -21,6 +21,7 @@ waterui-color.workspace = true
 wgpu = { workspace = true, optional = true }
 bytemuck = { version = "1.14", optional = true }
 vello = { workspace = true, optional = true }
+tracing.workspace = true
 
 [lints]
 workspace = true
