feat: Enhance panic logging and error handling in Apple backends
- Added functionality to fetch recent panic logs from the unified logging system on macOS and iOS.
- Updated log level parsing to include fault severity.
- Improved exit handling to check for panic logs before analyzing exit status.
- Refactored code to streamline panic detection and reporting.

fix: Adjust VStack layout behavior

- Modified final width calculation in VStack to ensure proper child centering by using proposed width when available.

chore: Update dependencies in Cargo.toml

- Added `arboard` for clipboard functionality and `robius-open` for URI handling.
- Updated `syntect` dependency to exclude default syntaxes for a leaner build.

feat: Implement Markdown rendering example

- Introduced a new Markdown example showcasing WaterUI's capabilities.
- Added tests for code block and table parsing in Markdown.

refactor: Enhance RichText and Code widgets

- Improved link handling in RichText to open URLs in the system's default browser.
- Updated Code widget to support copying code to clipboard with visual feedback.
- Enhanced syntax highlighting using `two-face` for extended language support.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -90,6 +90,8 @@ zenwave = { version = "0.2.0", default-features = false, features = ["hyper-back
 skyzen = { version = "0.1.0", default-features = false }
 
 tracing-panic = "0.1.2"
+arboard = "3.6"
+robius-open = { version = "0.1", default-features = false }
 
 [dependencies]
 nami.workspace = true
@@ -120,6 +122,8 @@ uuid = { version = "1.18.1", features = ["v4"] }
 serde_json = "1.0"
 waterui-graphics = { workspace = true, optional = true }
 async-fs = "2.2.0"
+arboard.workspace = true
+robius-open.workspace = true
 
 [target.'cfg(target_vendor = "apple")'.dependencies]
 zenwave = { workspace = true, features = ["native-tls"] }
