--- a/components/text/Cargo.toml
+++ b/components/text/Cargo.toml
@@ -16,7 +16,8 @@ waterui-color.workspace = true
 waterui-layout.workspace = true
 nami.workspace = true
 time.workspace = true
-syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
+syntect = { version = "5", default-features = false, features = ["default-themes", "regex-fancy"] }
+two-face = "0.4"
 async-oneshot = "0.5"
 pulldown-cmark = "0.13"
 
