feat(cli): enable hot reload by default for water run
- Add `--no-hot-reload` flag (hot reload is now opt-in to disable)
- Add FileWatcher using notify crate to watch src/ for .rs and .toml changes
- Add HotReloadRunner to orchestrate file watching, building, and broadcasting
- Fix build_hot_reload_lib() to set RUSTFLAGS with waterui_hot_reload_lib cfg
- Add 5-second connection timeout to app-side hot reload connection
- Add Timeout variant to ConnectionError

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -33,6 +33,7 @@ time = { workspace = true, features = ["serde"] }
 toml = "0.9.8"
 tracing.workspace = true
 which = "8.0.0"
+notify = { version = "8", default-features = false, features = ["macos_kqueue"] }
 
 # Terminal UI dependencies
 clap = { version = "4", features = ["derive"] }
