--- a/components/graphics/Cargo.toml
+++ b/components/graphics/Cargo.toml
@@ -18,6 +18,7 @@ canvas = ["wgpu", "dep:vello"]
 [dependencies]
 waterui-core.workspace = true
 waterui-color.workspace = true
+nami.workspace = true
 wgpu = { workspace = true, optional = true }
 bytemuck = { version = "1.14", optional = true }
 vello = { workspace = true, optional = true }
