--- a/examples/gesture/Water.toml
+++ b/examples/gesture/Water.toml
@@ -3,4 +3,4 @@ waterui_path = "../.."
 [package]
 type = "playground"
 name = "Gesture Example"
-bundle_identifier = "com.waterui.gesture-example"
+bundle_identifier = "com.waterui.gesture_example"
