--- a/examples/markdown/Water.toml
+++ b/examples/markdown/Water.toml
@@ -2,5 +2,5 @@ waterui_path = "../.."
 
 [package]
 type = "playground"
-name = "Flame Example"
-bundle_identifier = "com.waterui.flame-example"
+name = "Markdown Example"
+bundle_identifier = "com.waterui.example.markdown"
