--- a/examples/media-picker/Water.toml
+++ b/examples/media-picker/Water.toml
@@ -5,6 +5,5 @@ type = "playground"
 name = "Media Picker Example"
 bundle_identifier = "com.waterui.media_picker_example"
 
-[permissions.photo_library]
-enable = true
-description = "Required to access photos and videos from your library"
+# No photo library permission needed - system photo picker (PHPickerViewController)
+# only provides access to user-selected media without requiring library access
