--- a/examples/flame/Water.toml
+++ b/examples/flame/Water.toml
@@ -3,4 +3,4 @@ waterui_path = "../.."
 [package]
 type = "playground"
 name = "Flame Example"
-bundle_identifier = "com.waterui.flame-example"
+bundle_identifier = "com.waterui.example.flame"
