feat: Enhance window management and hot reload functionality
- Introduced FFI-compatible representations for `WindowStyle` and `WindowState`.
- Updated `WuiWindow` struct to include new fields: `resizable`, `state`, `toolbar`, and `style`.
- Modified the `Window` struct to support resizable windows and toolbar content.
- Added methods to set window properties such as `resizable`, `toolbar`, and `style`.
- Implemented a `FullScreenOverlayManager` for managing overlays during hot reload.
- Enhanced hot reload capabilities with a new `HotReloadView` struct for per-function hot reloading.
- Updated the library loading mechanism to support shared ownership of hot reload libraries.
- Improved error handling and status overlays during hot reload operations.
- Added markdown inclusion macro for rich text widgets.

--- a/ffi/cbindgen.toml
+++ b/ffi/cbindgen.toml
@@ -31,7 +31,7 @@ typedef struct WuiArray {
 trailer = """
 WuiEnv* waterui_init(void);
 
-WuiAnyView* waterui_main(void);
+struct WuiApp waterui_app(WuiEnv *env);
 
 #ifdef __cplusplus
 }
@@ -39,7 +39,7 @@ WuiAnyView* waterui_main(void);
 """
 
 [export]
-include = ["MediaLoadCallback", "MediaLoadResult"]
+include = ["MediaLoadCallback", "MediaLoadResult", "WuiApp", "WuiWindow", "WuiWindowStyle", "WuiWindowState"]
 
 [export.rename]
 
