feat(graphics): Add image rendering support for Canvas
Added full image loading and rendering capabilities:

- Created image.rs with CanvasImage type supporting RGBA pixel data and PNG/JPEG decoding
- Added draw_image(), draw_image_scaled(), and draw_image_sub() methods to DrawingContext
- Image scaling and sub-rectangle rendering (sprite sheet support)
- Uses peniko::ImageData and ImageBrush for vello integration
- Added image crate dependency for PNG/JPEG decoding
- Exported CanvasImage and ImageError from lib.rs

This implements Phase 6 of the full-featured Canvas plan.

--- a/components/graphics/Cargo.toml
+++ b/components/graphics/Cargo.toml
@@ -23,6 +23,7 @@ wgpu = { workspace = true, optional = true }
 bytemuck = { version = "1.14", optional = true }
 vello = { workspace = true, optional = true }
 tracing.workspace = true
+image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
 
 [lints]
 workspace = true
