--- a/components/graphics/Cargo.toml
+++ b/components/graphics/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["gui"]
 [features]
 default = ["canvas"]
 wgpu = ["dep:wgpu", "dep:bytemuck"]
-canvas = ["wgpu", "dep:vello"]
+canvas = ["wgpu", "dep:vello", "dep:parley"]
 
 [dependencies]
 waterui-core.workspace = true
@@ -24,6 +24,7 @@ bytemuck = { version = "1.14", optional = true }
 vello = { workspace = true, optional = true }
 tracing.workspace = true
 image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
+parley = { version = "0.5", optional = true }
 
 [lints]
 workspace = true
