--- a/ffi/Cargo.toml
+++ b/ffi/Cargo.toml
@@ -26,7 +26,7 @@ executor-core.workspace = true
 cbindgen = { version = "0.29.0", optional = true }
 waterui-graphics = { workspace = true, features = ["wgpu"] }
 wgpu.workspace = true
-paste = "1.0.15"
+pastey.workspace = true
 tracing.workspace = true
 tracing-panic.workspace = true
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
