--- a/utils/color/Cargo.toml
+++ b/utils/color/Cargo.toml
@@ -14,7 +14,7 @@ categories.workspace = true
 [dependencies]
 nami.workspace = true
 waterui-core.workspace = true
-
+pastey.workspace = true
 [features]
 
 
