--- a/Cargo.toml
+++ b/Cargo.toml
@@ -80,7 +80,7 @@ wgpu = "27.0.1"
 time = "0.3"
 tiny-skia = "0.11"
 vello = { git = "https://github.com/linebender/vello", branch = "main" }
-zenwave = { version = "0.2.0", path = "../zenwave", default-features = false, features = ["hyper-backend", "ws"] }
+zenwave = { version = "0.3.0", default-features = false, features = ["hyper-backend", "ws"] }
 skyzen = { version = "0.1.0", default-features = false }
 pastey = "0.2.0"
 tracing-panic = "0.1.2"
