--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
       - run: cargo llvm-cov --all-features --workspace --lcov --output-path lcov.info
       - uses: codecov/codecov-action@v4
         with:
-          files: lcov.info
+          use_oidc: true
           fail_ci_if_error: true
   typos:
     name: Typos
