refactor: update Cargo.toml files to improve workspace structure and add dev-dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,12 @@ members = [
     "utils/*",
     "ffi",
     "derive",
-    "cli",
-    "examples/*"]
-exclude = ["cli-old"]
+    "cli"
+]
+exclude = [
+  "examples/*"
+]
+
 resolver = "2"
 
 [package]
