--- a/components/form/Cargo.toml
+++ b/components/form/Cargo.toml
@@ -26,5 +26,9 @@ regex = "1.12.2"
 [features]
 default = []
 
+[dev-dependencies]
+serde_json = "1.0"
+waterui.workspace = true
+
 [lints]
 workspace = true
