--- a/examples/markdown/Cargo.toml
+++ b/examples/markdown/Cargo.toml
@@ -9,6 +9,7 @@ repository.workspace = true
 readme = "../../README.md"
 keywords = ["ui", "framework", "example", "markdown"]
 categories = ["gui"]
+publish = false
 
 [lib]
 crate-type = ["lib", "staticlib", "cdylib"]
