--- a/examples/starfield/Cargo.toml
+++ b/examples/starfield/Cargo.toml
@@ -9,6 +9,7 @@ repository.workspace = true
 readme = "../../README.md"
 keywords = ["ui", "framework", "example", "star field"]
 categories = ["gui"]
+publish = false
 
 [lib]
 crate-type = ["lib", "staticlib", "cdylib"]
