--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,9 @@ jobs:
       - uses: actions/checkout@v4
       - name: Generate Cargo.lock
         run: cargo generate-lockfile
+      - uses: Swatinem/rust-cache@v2
+        with:
+          shared-key: ci-ubuntu
       - uses: rustsec/audit-check@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
