--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ resolver = "2"
 
 [package]
 name = "waterui"
-version = "0.1.1"
+version = "0.2.0"
 edition.workspace = true
 authors.workspace = true
 license.workspace = true
@@ -75,7 +75,7 @@ waterui-navigation = { version = "0.1.0", path = "components/navigation" }
 waterui-gtk4 = { version = "0.1.0", path = "backends/gtk4" }
 waterui-web = { version = "0.1.0", path = "backends/web" }
 waterui = { version = "0.1.0", path = "." }
-native-executor = { version = "0.7.0" }
+native-executor = { version = "0.7.0", features = ["polyfill"] }
 waterui-derive = { version = "0.1.0", path = "derive" }
 waterkit-location = { version = "0.1.0", path = "kit/location" }
 serde = { version = "1.0", default-features = false, features = ["alloc"] }
