--- a/.github/workflows/build-cli.yml
+++ b/.github/workflows/build-cli.yml
@@ -79,7 +79,7 @@ jobs:
           ref: ${{ needs.check.outputs.tag }}
 
       - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@nightly
         with:
           targets: ${{ matrix.target }}
 
