chore: update licenses to include Apache 2.0 and MIT, and update README badge

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,7 +32,7 @@ categories = ["gui"]
 edition = "2024"
 authors = ["Lexo Liu"]
 rust-version = "1.87"
-license = "MIT"
+license = "Apache-2.0 OR MIT"
 readme = "README.md"
 repository = "https://github.com/water-rs/waterui"
 description = "A modern UI framework for Rust"
