chore: update workspace members to include examples and cli

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ members = [
     "utils/*",
     "ffi",
     "macros",
-    "cli"
+    "cli",
+    "examples/*",
 ]
 exclude = [
-  "examples/*",
   "hydrolysis",
   "derive"
 ]
